# trend_fetcher

./: .gitignore  Cargo.toml  README.md  config.toml.example  rocket.toml
federation/: example-data.toml.example
src/: configuration.rs  federation.rs  main.rs  rocket.rs
