[package]
name = "trend_fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.11.23"
serde_json = "1.0.108"
tokio = "1.35.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.mastodon-async]
version = "1.3.1"
features = ["toml", "mt"]
