[package]
name = "trend_fetcher"
version = "0.1.0"
edition = "2021"
description = "Fetches trends from Mastodon"
license = "MIT"
repository = "https://github.com/Teqed/trend_fetcher"
keywords = ["mastodon", "fediverse"]
categories = ["web-programming"]
readme = "README.md"

[dependencies]
reqwest = "0.11.23"
serde_json = "1.0.108"
tokio = "1.35.1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "tls-native-tls", "time"] }
dotenv = "0.15.0"
toml = "0.8.8"
time = "0.3.31"
futures = "0.3.30"
colored = "2.1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.mastodon-async]
version = "1.3.1"
features = ["toml", "mt"]
