[package]
name = "trend_fetcher"
version = "0.1.0"
edition = "2021"
description = "Fetches trends from Mastodon"
license = "MIT"
repository = "https://github.com/Teqed/trend_fetcher"
keywords = ["mastodon", "fediverse"]
categories = ["web-programming"]
readme = "README.md"

[dependencies]
reqwest = "0.11.23"
serde_json = "1.0.108"
tokio = "1.35.1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "tls-native-tls", "time"] }
toml = "0.8.8"
time = "0.3.31"
futures = "0.3.30"
colored = "2.1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = "1.0.195"
async-recursion = "1.0.5"
color-eyre = "0.6.2"
reqwest-retry-after = "0.1.2"
reqwest-middleware = "0.2.4"
chrono = "0.4.32"
rocket = { version = "0.5.0", features = ["json"] }
http = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.mastodon-async]
git = "https://github.com/Teqed/mastodon-async.git"
branch = "comb"
version = "1.2.1"
features = ["toml", "mt"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = "symbols"

[[bin]]
name = "trend_fetcher"
path = "src/main.rs"
